# logs-explorer

./: .gitignore  .npmrc  .prettierrc  ADVANCED_FILTERING.md  AUTOMATION_FEATURES.md  BACKEND_DEPRECATION_MIGRATION_SUMMARY.md  CENTRALIZED_TERMINAL.md  COMMANDS_MODULAR_REFACTORING_PLAN.md  COMMANDS_MODULAR_REFACTORING_SUMMARY.md  COMPONENT_GROUPS_MIGRATION_SUMMARY.md  COMPONENT_REORGANIZATION_SUMMARY.md  CONFIGS_FEATURES.md  DATABASE_MODULAR_REFACTORING_CORRECTED.md  DATABASE_MODULAR_REFACTORING_PLAN.md  DATABASE_MODULAR_REFACTORING_PLAN_V2.md  DATABASE_MODULAR_REFACTORING_SUMMARY.md  DEBUG_FIXES_SUMMARY.md  FRONTEND_BUILD_ISSUES_SUMMARY.md  K8S_MODULAR_REFACTORING.md  K8S_MODULAR_REFACTORING_SUMMARY.md  LIB_MODULAR_REFACTORING_PLAN.md  LIB_MODULAR_REFACTORING_SUMMARY.md  LOGGER_MIGRATION_GUIDE.md  LOGS_EXPLORER_PROGRESS_REPORT.md  METRICS_FEATURES.md  MIGRATION_PROGRESS.md  MIGRATION_SUMMARY.md  MISSING_BACKEND_COMMANDS.md  MODULARIZATION_PROGRESS_SUMMARY.md  MODULARIZATION_ROADMAP.md  MODULAR_COMPONENT_STRUCTURE.md  NAVBAR_CONNECTION_STATUS_OPTIMIZATION.md  OPTIMIZATION_SUMMARY.md  README.md  SCROLL_AREA_FIXES_PROGRESS.md  SDK_MANAGER.md  SERVICE_MIGRATION_GUIDE.md  SVELTE5_MIGRATION_GUIDE.md  SVELTE5_UPGRADE_FINDINGS.md  TAILWIND_MIGRATION_GUIDE.md  (+31 more)
data/: logs-explorer.db
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  test_k8s
src-tauri/capabilities/: default.json
src-tauri/src/: database.rs  k8s.rs  lib.rs  main.rs
src-tauri/src/commands/: framework_commands.rs
src-tauri/src/documents/: commands.rs  mod.rs
src-tauri/src/frameworks/: commands.rs  mod.rs
(+534 files in other folders)
